--- a/templates/main/friend.html.twig
+++ b/templates/main/friend.html.twig
@@ -23,5 +23,7 @@
 
 {% block javascripts %}
     {{ parent() }}
+    {{ encore_entry_script_tags('js/notificationToastr') }}
+    {{ encore_entry_script_tags('js/listProfile') }}
     {% include 'partials/js/_listProfileJs.html.twig' %}
 {% endblock %}
