--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -33,5 +33,6 @@
 
 {% block javascripts %}
     {{ parent() }}
+    {{ encore_entry_script_tags('js/listProfile') }}
     {% include 'partials/js/_listProfileJs.html.twig' %}
 {% endblock %}
